# expression-calculator

./: LICENSE  README.md  meson.build
include/expression_evaluator/: evaluator.hpp  lexer.hpp  parser.hpp  token.hpp
include/expression_evaluator/structures/: linked_list.hpp  queue.hpp  stack.hpp
src/: evaluator.cpp  lexer.cpp  main.cpp  meson.build  parser.cpp
tests/: meson.build  test_eval.cpp
